PROJECT(curl_lib)

# header files list
SET(INCLUDE_H
    include/curl/curl.h
    include/curl/curlbuild.h
    include/curl/curlrules.h
    include/curl/curlver.h
    include/curl/easy.h
    include/curl/mprintf.h
    include/curl/multi.h
    include/curl/stdcheaders.h
    include/curl/typecheck-gcc.h
)

SET(SRC_H
    src/amigaos.h
    src/arpa_telnet.h
    src/asyn.h
    src/config-amigaos.h
    src/config-dos.h
    src/config-mac.h
    src/config-os400.h
    src/config-riscos.h
    src/config-symbian.h
    src/config-tpf.h
    src/config-vxworks.h
    src/config-win32.h
    src/config-win32ce.h
    src/conncache.h
    src/connect.h
    src/content_encoding.h
    src/cookie.h
    src/curl_addrinfo.h
    src/curl_base64.h
    src/curl_config.h
    src/curl_des.h
    src/curl_endian.h
    src/curl_fnmatch.h
    src/curl_gethostname.h
    src/curl_gssapi.h
    src/curl_hmac.h
    src/curl_ldap.h
    src/curl_md4.h
    src/curl_md5.h
    src/curl_memory.h
    src/curl_memrchr.h
    src/curl_multibyte.h
    src/curl_ntlm.h
    src/curl_ntlm_core.h
    src/curl_ntlm_msgs.h
    src/curl_ntlm_wb.h
    src/curl_printf.h
    src/curl_rtmp.h
    src/curl_sasl.h
    src/curl_sec.h
    src/curl_setup.h
    src/curl_setup_once.h
    src/curl_sspi.h
    src/curl_threads.h
    src/curlx.h
    src/dict.h
    src/dotdot.h
    src/easyif.h
    src/escape.h
    src/file.h
    src/fileinfo.h
    src/formdata.h
    src/ftp.h
    src/ftplistparser.h
    src/getinfo.h
    src/gopher.h
    src/hash.h
    src/hostcheck.h
    src/hostip.h
    src/http.h
    src/http2.h
    src/http_chunks.h
    src/http_digest.h
    src/http_negotiate.h
    src/http_proxy.h
    src/if2ip.h
    src/imap.h
    src/inet_ntop.h
    src/inet_pton.h
    src/llist.h
    src/memdebug.h
    src/multihandle.h
    src/multiif.h
    src/netrc.h
    src/non-ascii.h
    src/nonblock.h
    src/parsedate.h
    src/pingpong.h
    src/pipeline.h
    src/pop3.h
    src/progress.h
    src/rawstr.h
    src/rtsp.h
    src/select.h
    src/sendf.h
    src/setup-os400.h
    src/setup-vms.h
    src/share.h
    src/sigpipe.h
    src/slist.h
    src/smb.h
    src/smtp.h
    src/sockaddr.h
    src/socks.h
    src/speedcheck.h
    src/splay.h
    src/ssh.h
    src/strdup.h
    src/strequal.h
    src/strerror.h
    src/strtok.h
    src/strtoofft.h
    src/telnet.h
    src/tftp.h
    src/timeval.h
    src/transfer.h
    src/url.h
    src/urldata.h
    src/warnless.h
    src/wildcard.h
    src/x509asn1.h
)

# source files list
SET(SRC_C
    src/amigaos.c
    src/asyn-ares.c
    src/asyn-thread.c
    src/base64.c
    src/conncache.c
    src/connect.c
    src/content_encoding.c
    src/cookie.c
    src/curl_addrinfo.c
    src/curl_des.c
    src/curl_endian.c
    src/curl_fnmatch.c
    src/curl_gethostname.c
    src/curl_gssapi.c
    src/curl_memrchr.c
    src/curl_multibyte.c
    src/curl_ntlm.c
    src/curl_ntlm_core.c
    src/curl_ntlm_msgs.c
    src/curl_ntlm_wb.c
    src/curl_rtmp.c
    src/curl_sasl.c
    src/curl_sasl_gssapi.c
    src/curl_sasl_sspi.c
    src/curl_sspi.c
    src/curl_threads.c
    src/dict.c
    src/dotdot.c
    src/easy.c
    src/escape.c
    src/file.c
    src/fileinfo.c
    src/formdata.c
    src/ftp.c
    src/ftplistparser.c
    src/getenv.c
    src/getinfo.c
    src/gopher.c
    src/hash.c
    src/hmac.c
    src/hostasyn.c
    src/hostcheck.c
    src/hostip.c
    src/hostip4.c
    src/hostip6.c
    src/hostsyn.c
    src/http.c
    src/http2.c
    src/http_chunks.c
    src/http_digest.c
    src/http_negotiate.c
    src/http_negotiate_sspi.c
    src/http_proxy.c
    src/idn_win32.c
    src/if2ip.c
    src/imap.c
    src/inet_ntop.c
    src/inet_pton.c
    src/krb5.c
    src/ldap.c
    src/llist.c
    src/md4.c
    src/md5.c
    src/memdebug.c
    src/mprintf.c
    src/multi.c
    src/netrc.c
    src/non-ascii.c
    src/nonblock.c
    src/nwlib.c
    src/nwos.c
    src/openldap.c
    src/parsedate.c
    src/pingpong.c
    src/pipeline.c
    src/pop3.c
    src/progress.c
    src/rawstr.c
    src/rtsp.c
    src/security.c
    src/select.c
    src/sendf.c
    src/share.c
    src/slist.c
    src/smb.c
    src/smtp.c
    src/socks.c
    src/socks_gssapi.c
    src/socks_sspi.c
    src/speedcheck.c
    src/splay.c
    src/ssh.c
    src/strdup.c
    src/strequal.c
    src/strerror.c
    src/strtok.c
    src/strtoofft.c
    src/telnet.c
    src/tftp.c
    src/timeval.c
    src/transfer.c
    src/url.c
    src/version.c
    src/warnless.c
    src/wildcard.c
    src/x509asn1.c
)

# header files list
SET(INCLUDE_HPP
    include/curl/curl.h
    include/curl/curlbuild.h
    include/curl/curlrules.h
    include/curl/curlver.h
    include/curl/easy.h
    include/curl/mprintf.h
    include/curl/multi.h
    include/curl/stdcheaders.h
    include/curl/typecheck-gcc.h
)

SET(SRC_H
    src/amigaos.h
    src/arpa_telnet.h
    src/asyn.h
    src/config-amigaos.h
    src/config-dos.h
    src/config-mac.h
    src/config-os400.h
    src/config-riscos.h
    src/config-symbian.h
    src/config-tpf.h
    src/config-vxworks.h
    src/config-win32.h
    src/config-win32ce.h
    src/conncache.h
    src/connect.h
    src/content_encoding.h
    src/cookie.h
    src/curl_addrinfo.h
    src/curl_base64.h
    src/curl_config.h
    src/curl_des.h
    src/curl_endian.h
    src/curl_fnmatch.h
    src/curl_gethostname.h
    src/curl_gssapi.h
    src/curl_hmac.h
    src/curl_ldap.h
    src/curl_md4.h
    src/curl_md5.h
    src/curl_memory.h
    src/curl_memrchr.h
    src/curl_multibyte.h
    src/curl_ntlm.h
    src/curl_ntlm_core.h
    src/curl_ntlm_msgs.h
    src/curl_ntlm_wb.h
    src/curl_printf.h
    src/curl_rtmp.h
    src/curl_sasl.h
    src/curl_sec.h
    src/curl_setup.h
    src/curl_setup_once.h
    src/curl_sspi.h
    src/curl_threads.h
    src/curlx.h
    src/dict.h
    src/dotdot.h
    src/easyif.h
    src/escape.h
    src/file.h
    src/fileinfo.h
    src/formdata.h
    src/ftp.h
    src/ftplistparser.h
    src/getinfo.h
    src/gopher.h
    src/hash.h
    src/hostcheck.h
    src/hostip.h
    src/http.h
    src/http2.h
    src/http_chunks.h
    src/http_digest.h
    src/http_negotiate.h
    src/http_proxy.h
    src/if2ip.h
    src/imap.h
    src/inet_ntop.h
    src/inet_pton.h
    src/llist.h
    src/memdebug.h
    src/multihandle.h
    src/multiif.h
    src/netrc.h
    src/non-ascii.h
    src/nonblock.h
    src/parsedate.h
    src/pingpong.h
    src/pipeline.h
    src/pop3.h
    src/progress.h
    src/rawstr.h
    src/rtsp.h
    src/select.h
    src/sendf.h
    src/setup-os400.h
    src/setup-vms.h
    src/share.h
    src/sigpipe.h
    src/slist.h
    src/smb.h
    src/smtp.h
    src/sockaddr.h
    src/socks.h
    src/speedcheck.h
    src/splay.h
    src/ssh.h
    src/strdup.h
    src/strequal.h
    src/strerror.h
    src/strtok.h
    src/strtoofft.h
    src/telnet.h
    src/tftp.h
    src/timeval.h
    src/transfer.h
    src/url.h
    src/urldata.h
    src/warnless.h
    src/wildcard.h
    src/x509asn1.h
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../
)

SET(SOURCES
	${SRC_C}
)

SET(HEADERS
#	${INCLUDE_H}
#	${SRC_H}
)

ADD_LIBRARY(curl_lib STATIC ${HEADERS} ${SOURCES})
